--- a/InStructergy.MVC/Views/Home/Index.cshtml
+++ b/InStructergy.MVC/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "InStructergy Home";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
-    <h1>InStructergy for Teachers</h1>
+    <h1>InStructergy</h1>
     <p class="lead"></p>
 </div>
 
