--- a/InStructergy.MVC/Views/Shared/_Layout.cshtml
+++ b/InStructergy.MVC/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - InStructergy by Parker Anderson</p>
+            <p>&copy; @DateTime.Now.Year</p>
         </footer>
     </div>
 
