--- a/InStructergy.MVC/Views/Course/Index.cshtml
+++ b/InStructergy.MVC/Views/Course/Index.cshtml
@@ -1,7 +1,33 @@
-﻿
+﻿@model IEnumerable<InStructergy.Models.CourseListItem>
+
 @{
-    ViewBag.Title = "Course";
+    ViewBag.Title = "Index";
 }
 
-<h2>Courses</h2>
+<h2>Index</h2>
 
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+        </td>
+    </tr>
+}
+
+</table>
