code correction for Course Create and List models and controllers to fix break.  Refactored shared-layout navbar to require authentication for Courses tab.

--- a/InStructergy.MVC/Views/Course/Create.cshtml
+++ b/InStructergy.MVC/Views/Course/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InStructergy.Models.CourseCreate
 
 @{
-    ViewBag.Title = "CourseCreate";
+    ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
