--- a/InStructergy.MVC/Views/Shared/_Layout.cshtml
+++ b/InStructergy.MVC/Views/Shared/_Layout.cshtml
@@ -22,7 +22,13 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Courses", "Course", "Course")</li>
+                    @if (User.Identity.IsAuthenticated)
+
+                    {
+
+                        <li>@Html.ActionLink("Courses", "Course", "Course")</li>
+                    }
+
                  </ul>
                 @Html.Partial("_LoginPartial")
             </div>
