additional navbar refactor - role requirement for Course Index.

--- a/InStructergy.MVC/Views/Shared/_Layout.cshtml
+++ b/InStructergy.MVC/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Instructor"))
 
                     {
 
