--- a/InStructergy.MVC/Views/Account/ForgotPassword.cshtml
+++ b/InStructergy.MVC/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.ForgotPasswordViewModel
+﻿@model SchoolBoard.MVC.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
