--- a/InStructergy.MVC/Views/Account/Register.cshtml
+++ b/InStructergy.MVC/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.RegisterViewModel
+﻿@model SchoolBoard.MVC.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
