--- a/InStructergy.MVC/Views/Account/VerifyCode.cshtml
+++ b/InStructergy.MVC/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.VerifyCodeViewModel
+﻿@model SchoolBoard.MVC.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
