--- a/InStructergy.MVC/Views/Course/Create.cshtml
+++ b/InStructergy.MVC/Views/Course/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.CourseModels.CourseCreate
+﻿@model SchoolBoard.Models.CourseModels.CourseCreate
 
 @{
     ViewBag.Title = "Create";
