--- a/InStructergy.MVC/Views/Course/Delete.cshtml
+++ b/InStructergy.MVC/Views/Course/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.CourseModels.CourseDetail
+﻿@model SchoolBoard.Models.CourseModels.CourseDetail
 
 @{
     ViewBag.Title = "Delete";
