--- a/InStructergy.MVC/Views/Course/Edit.cshtml
+++ b/InStructergy.MVC/Views/Course/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.CourseModels.CourseEdit
+﻿@model SchoolBoard.Models.CourseModels.CourseEdit
 
 @{
     ViewBag.Title = "Edit";
