--- a/InStructergy.MVC/Views/Course/Index.cshtml
+++ b/InStructergy.MVC/Views/Course/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<InStructergy.Models.CourseModels.CourseListItem>
+﻿@model IEnumerable<SchoolBoard.Models.CourseModels.CourseListItem>
 
 @{
     ViewBag.Title = "Index";
