--- a/InStructergy.MVC/Views/Manage/AddPhoneNumber.cshtml
+++ b/InStructergy.MVC/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.AddPhoneNumberViewModel
+﻿@model SchoolBoard.MVC.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
