--- a/InStructergy.MVC/Views/Manage/SetPassword.cshtml
+++ b/InStructergy.MVC/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.SetPasswordViewModel
+﻿@model SchoolBoard.MVC.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
