--- a/InStructergy.MVC/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/InStructergy.MVC/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.VerifyPhoneNumberViewModel
+﻿@model SchoolBoard.MVC.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
