--- a/InStructergy.MVC/Views/Post/Create.cshtml
+++ b/InStructergy.MVC/Views/Post/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.PostModels.PostCreate
+﻿@model SchoolBoard.Models.PostModels.PostCreate
 
 @{
     ViewBag.Title = "Create";
