--- a/InStructergy.MVC/Views/Post/Delete.cshtml
+++ b/InStructergy.MVC/Views/Post/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.PostModels.PostDetail
+﻿@model SchoolBoard.Models.PostModels.PostDetail
 
 @{
     ViewBag.Title = "Delete";
