--- a/InStructergy.MVC/Views/Post/Index.cshtml
+++ b/InStructergy.MVC/Views/Post/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<InStructergy.Models.PostListItem>
+﻿@model IEnumerable<SchoolBoard.Models.PostListItem>
 
 @{
     ViewBag.Title = "Index";
