--- a/InStructergy.MVC/Views/Student/Details.cshtml
+++ b/InStructergy.MVC/Views/Student/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.StudentModels.StudentDetail
+﻿@model SchoolBoard.Models.StudentModels.StudentDetail
 
 @{
     ViewBag.Title = "Details";
