--- a/InStructergy.MVC/Views/Student/Edit.cshtml
+++ b/InStructergy.MVC/Views/Student/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.StudentModels.StudentEdit
+﻿@model SchoolBoard.Models.StudentModels.StudentEdit
 
 @{
     ViewBag.Title = "Edit";
