--- a/InStructergy.MVC/Views/Student/Index.cshtml
+++ b/InStructergy.MVC/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<InStructergy.Models.StudentModels.StudentListItem>
+﻿@model IEnumerable<SchoolBoard.Models.StudentModels.StudentListItem>
 
 @{
     ViewBag.Title = "Index";
