--- a/InStructergy.MVC/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/InStructergy.MVC/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.ExternalLoginConfirmationViewModel
+﻿@model SchoolBoard.MVC.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
