--- a/InStructergy.MVC/Views/Account/ResetPassword.cshtml
+++ b/InStructergy.MVC/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.ResetPasswordViewModel
+﻿@model SchoolBoard.MVC.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
