--- a/InStructergy.MVC/Views/Account/SendCode.cshtml
+++ b/InStructergy.MVC/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.SendCodeViewModel
+﻿@model SchoolBoard.MVC.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
