--- a/InStructergy.MVC/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/InStructergy.MVC/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.ExternalLoginListViewModel
+﻿@model SchoolBoard.MVC.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
