--- a/InStructergy.MVC/Views/Manage/ChangePassword.cshtml
+++ b/InStructergy.MVC/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.ChangePasswordViewModel
+﻿@model SchoolBoard.MVC.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
