--- a/InStructergy.MVC/Views/Manage/ManageLogins.cshtml
+++ b/InStructergy.MVC/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.MVC.Models.ManageLoginsViewModel
+﻿@model SchoolBoard.MVC.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
