--- a/InStructergy.MVC/Views/Student/Create.cshtml
+++ b/InStructergy.MVC/Views/Student/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model InStructergy.Models.StudentModels.StudentCreate
+﻿@model SchoolBoard.Models.StudentModels.StudentCreate
 
 @{
     ViewBag.Title = "Create";
