course/student/id data pass working, duplicate seed course fix

--- a/SchoolBoard.MVC/Views/Course/Index.cshtml
+++ b/SchoolBoard.MVC/Views/Course/Index.cshtml
@@ -7,7 +7,7 @@
             {
                 <tr>
                     <td>
-                        <a asp-controller="Course" asp-action="Details" asp-route-id="@course.Id">
+                        <a href="~/Course/Student/@course.Id" asp-controller="Course" asp-action="Details" asp-route-id="@course.Id">
                             @course.Name
                         </a>
                         
