wrap course/student table data in anchor href tags

--- a/SchoolBoard.MVC/Views/Course/Student.cshtml
+++ b/SchoolBoard.MVC/Views/Course/Student.cshtml
@@ -9,7 +9,9 @@
 
                      <tr>
                          <td>
+                             <a href="~/Student/Details/@student.Id">
                              @student.Name
+                                 </a>
                          </td>
                      </tr>
                      }
