--- a/SchoolBoard.MVC/Views/Home/Index.cshtml
+++ b/SchoolBoard.MVC/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SchoolBoard.Data.ApplicationUser
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "SchoolBoard";
 }
 
 <h2>SchoolBoard</h2>
