--- a/SchoolBoard.MVC/Views/Home/Index.cshtml
+++ b/SchoolBoard.MVC/Views/Home/Index.cshtml
@@ -5,7 +5,10 @@
 }
 
 <h2>SchoolBoard</h2>
-<h3>Welcome Educators</h3>
+@if (!User.Identity.IsAuthenticated) 
+{<h3>Welcome Educators</h3>}
+
+<h3>Welcome @User.Identity.Name</h3>
 <div>@{ if (User.Identity.IsAuthenticated)
     {
 
