--- a/SchoolBoard.MVC/Views/Student/Details.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Details.cshtml
@@ -2,29 +2,6 @@
    
 
 
-<h2>@Model.Name</h2>
-<h3>Posts</h3>
-@if (Model.Posts.Any())
-{
-                <table class="table table-hover" id="postsTable">
-                    <tbody>
-                        @foreach (var post in Model.Posts)
-                        {<tr>
-                            <td>
-                                @post.Title
-                                
-                            </td>
-                            <td>
-                                
-                            </td>
-                        </tr>}
-                    </tbody>
-                </table>
-}
-else
-{
-                < h2 > There are currently no posts for this student.</ h2 >
-            }
 
 <table>
     <tbody>
@@ -33,3 +10,20 @@ else
     </tbody>
 </table>
 
+@*@<table>
+    @foreach (var post in Model.Posts)
+    {
+    <tbody>
+    <tr>
+        <td>
+            @post.Title
+        </td>
+        <td>
+            @post.Body
+        </td>
+        <td>
+            @post.Instructor.Name
+        </td>
+        </tr>
+    </tbody>}
+</table>*@
