posts property to ICollection in Data.Student to enable navigation property --> .Include(Posts)

--- a/SchoolBoard.MVC/Views/Student/Details.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Details.cshtml
@@ -10,7 +10,7 @@
     </tbody>
 </table>
 
-@*@<table>
+<table>
     @foreach (var post in Model.Posts)
     {
     <tbody>
@@ -21,9 +21,6 @@
         <td>
             @post.Body
         </td>
-        <td>
-            @post.Instructor.Name
-        </td>
         </tr>
     </tbody>}
-</table>*@
+</table>
