--- a/SchoolBoard.MVC/Views/Student/Details.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Details.cshtml
@@ -1,26 +1,32 @@
-﻿@model      SchoolBoard.Models.StudentModels.StudentDetail
-   
+﻿@model  SchoolBoard.Models.StudentModels.StudentDetail
+
+<h1>SchoolBoard for @Model.Name</h1>
+
+<span id="headingButton">
+   <a href="~/Post/Create/@Model.Posts.Count()" asp-controller="Post" asp-action="CreatePost">
+        Create new Post
+    </a>
+</span>
 
 
+@*<table>
+        <tbody>
 
-<table>
-    <tbody>
-        
-          @Html.Partial("CreatePost", new SchoolBoard.Models.PostModels.PostCreate())
-    </tbody>
-</table>
+              @Html.Partial("CreatePost", new SchoolBoard.Models.PostModels.PostCreate())
+        </tbody>
+    </table>
 
-<table>
-    @foreach (var post in Model.Posts)
-    {
-    <tbody>
-    <tr>
-        <td>
-            @post.Title
-        </td>
-        <td>
-            @post.Body
-        </td>
-        </tr>
-    </tbody>}
-</table>
+    <table>
+        @foreach (var post in Model.Posts)
+        {
+        <tbody>
+        <tr>
+            <td>
+                @post.Title
+            </td>
+            <td>
+                @post.Body
+            </td>
+            </tr>
+        </tbody>}*@
+<!--</table>-->
