--- a/SchoolBoard.MVC/Views/Home/Index.cshtml
+++ b/SchoolBoard.MVC/Views/Home/Index.cshtml
@@ -1,27 +1,21 @@
 ﻿@model SchoolBoard.Data.ApplicationUser
-
 @{
     ViewBag.Title = "SchoolBoard";
 }
-
 <h2>SchoolBoard</h2>
-@if (!User.Identity.IsAuthenticated) 
-{<h3>Welcome Educators</h3>}
-
-<h3>Welcome @User.Identity.Name</h3>
-<div>@{ if (User.Identity.IsAuthenticated)
-    {
-
-    <p>
-        @Html.ActionLink("My Courses", "Index", "Course")
-    </p>
-
+@if (!User.Identity.IsAuthenticated)
+{
+    <h3>Welcome To SchoolBoard</h3>
+}
+<h3>
+    Hello @User.Identity.Name!
+</h3>
+<div>
+    @{ if (User.Identity.IsAuthenticated)
+        {
+            <p>
+                @Html.ActionLink("My Courses", "Index", "Course")
+            </p>
+        }
     }
-   
-    }
-   
-    </div>
-
-
-
-
+</div>
