--- a/SchoolBoard.MVC/Views/Post/Create.cshtml
+++ b/SchoolBoard.MVC/Views/Post/Create.cshtml
@@ -1,18 +1,58 @@
-﻿@model SchoolBoard.Models.PostModels.NewPostModel
+﻿@model SchoolBoard.Models.PostModels.PostCreate
 
-<h1>New Post | @Model.StudentName</h1>
+@{
+    ViewBag.Title = "Create";
+}
 
-<form asp-action="CreatePost" method="post" id="createPostForm">
-    <div class="form-group">
-        <label asp-for="Title">Title</label>
-        <input asp-for="Title" class="form-control" />
+<h2>Create</h2>
+
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>PostCreate</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.Label("Student Name:", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.Student.Name)
+                @Html.ValidationMessageFor(model => model.Student.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label asp-for="Body">Body</label>
-        <textarea asp-for="Body" class="form-control"></textarea>
-    </div>
-    <button type="submit" id="submitPostButton" class="btn btn-submitPost">
-        Submit
-    </button>
-    <input asp-for="StudentId" type="hidden" />
-</form>
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
