--- a/SchoolBoard.MVC/Content/Site.css
+++ b/SchoolBoard.MVC/Content/Site.css
@@ -1,6 +1,16 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color:darkslategray;
+    background-image: url(../Images/green-chalkboard-background.jpg);
+    background-size:cover;
+
+    
+    background-repeat:no-repeat;
+    color:ivory;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:initial;
+    font-style:italic;
 }
 
 /* Set padding to keep content from hitting the edges */
