--- a/SchoolBoard.MVC/Views/Student/Details.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SchoolBoard.Models.StudentModels.StudentDetail
 
-<h1>SchoolBoard for @Model.</h1>
+<h1>SchoolBoard for @Model.Name</h1>
 
 <table class="table-bordered" id="postsTable">
     <tbody>
@@ -8,8 +8,7 @@
         {
             foreach (var post in Model.Posts)
             {
-                <tr>
-
+               <tr>
                     <td>
                         @post.Title
                     </td>
