--- a/SchoolBoard.MVC/Views/Post/Create.cshtml
+++ b/SchoolBoard.MVC/Views/Post/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SchoolBoard.Models.PostModels.PostCreate
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "New Post";
 }
 
-<h2>Create</h2>
+<h2>Create New Post</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>PostCreate</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
