my name property to data class and models for post

--- a/SchoolBoard.MVC/Views/Student/Details.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Details.cshtml
@@ -13,6 +13,9 @@
             {
                 <tr>
                     <td>
+                        @post.MyName
+                    </td>
+                    <td>
                         @post.Title
                     </td>
                     <td>
