create general Courses List view and action

--- a/SchoolBoard.MVC/Views/Home/Index.cshtml
+++ b/SchoolBoard.MVC/Views/Home/Index.cshtml
@@ -14,7 +14,10 @@
     @{ if (User.Identity.IsAuthenticated)
         {
             <p>
-                @Html.ActionLink("My Courses", "Index", "Course")
+                @Html.ActionLink("Courses", "Index", "Course")
+            </p>
+            <p>
+                @Html.ActionLink("My Courses", "MyCourses", "Course")
             </p>
         }
     }
