--- a/SchoolBoard.MVC/Views/Course/MyCourses.cshtml
+++ b/SchoolBoard.MVC/Views/Course/MyCourses.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<SchoolBoard.Models.CourseModels.CourseListItem>
 
 @{
-    ViewBag.Title = "Courses";
+    ViewBag.Title = "My Courses";
 }
 
-<h2>Courses</h2>
-
+<h2>My Courses</h2>
 
 <table class="table table-hover" id="courseIndexTable">
 
@@ -22,3 +21,5 @@
     }
 
 </table>
+
+
