--- a/SchoolBoard.MVC/Views/Shared/_Layout.cshtml
+++ b/SchoolBoard.MVC/Views/Shared/_Layout.cshtml
@@ -10,15 +10,17 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+                <a class="navbar-brand navLogo" href="~/Home/Index"></a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                    @Html.ActionLink("SchoolBoard", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    
+                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
