--- a/SchoolBoard.MVC/wwwroot/css/site.css
+++ b/SchoolBoard.MVC/wwwroot/css/site.css
@@ -75,7 +75,12 @@ html {
   position: relative;
   min-height: 100%;
 }
-
+h1{
+    color: ghostwhite;
+}
+h2{
+    color: ghostwhite;
+}
 body {
     padding-top: 50px 0 20px 0;
     padding-bottom: 20px;
@@ -83,7 +88,7 @@ body {
     background-size: cover;
     background-image: url(../Images/ChalkBoard.jpg);
     background-repeat: no-repeat;
-    color: ivory;
+    color: ghostwhite;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: initial;
     font-style: italic;
