PostController and index view

--- a/SchoolBoard.MVC/Views/Student/Detail.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SchoolBoard.Models.Student.StudentDetailViewModel
 
-<h1>@Model.Student.Name's SchoolBoard</h1>
+<h1>@Model.Student.Name</h1>
 
 @if (Model.Posts.Any())
 {
