--- a/SchoolBoard.MVC/Views/Shared/_Layout.cshtml
+++ b/SchoolBoard.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<IdentityUser> SignInManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -20,6 +24,32 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">Settings<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li role="separator" class="dropdown-divider"></li>
+                                    <li class="dropdown-header">Profile</li>
+                                    <li><a asp-controller="Profile" asp-action="Detail">My Profile</a></li>
+                                    @if (User.IsInRole("Administrator"))
+                                    {
+                                        <li role="separator" class="dropdown-divider"></li>
+                                        <li class="dropdown-header">Admin</li>
+                                        <li role="separator" class="dropdown-divider"></li>
+                                            <li class="dropdown-header">Course Administration</li>
+                                            <li><a asp-controller="Course" asp-action="Create">Add Course</a></li>
+                                            <li><a asp-controller="Course" asp-action="Delete">Delete Course</a></li>
+                                            <li><a asp-controller="Course" asp-action="Edit">Update Course</a></li>
+
+                                        
+
+
+
+                                    }
+                                </ul>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -33,7 +63,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - SchoolBoard 
+            &copy; 2021 - SchoolBoard
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
